...
                                fontFamily: 'Poppins',
                                fontSize: 13,
                              ),
                            ),
                            actions: [
                              AppDialogAction(
                                label: 'Tidak',
                                onPressed: () => Navigator.pop(context),
                              ),
                              AppDialogAction(
                                label: 'Ya, Reset',
                                type: AppDialogActionType.gradient,
                                onPressed: () {
...
